# UnityMLPlayground

./: .gitignore  LICENSE  Makefile  README.md  pyproject.toml
Assets/: DefaultVolumeProfile.asset  UniversalRenderPipelineGlobalSettings.asset
Assets/DodgingAgent/: DodgyActions.inputactions
Assets/DodgingAgent/Materials/: Black.mat  Yellow transparent.mat
Assets/DodgingAgent/Models/: DroneAgent_v14.onnx  Official_2_4Layers.onnx  Official_4_run1.onnx  dgx_beefy_v2.onnx  dgx_beefy_v4.onnx  drone_dgx_v3.onnx
Assets/DodgingAgent/Models/stability_train2_stand/: At100mil.onnx  At100mil.onnx.data
Assets/DodgingAgent/Models/stability_train2_standv2/: At100mil.onnx  At100mil.onnx.data
Assets/DodgingAgent/Prefabs/Agents/: DroneAgent.prefab  SpatialDroneAgent.prefab
Assets/DodgingAgent/Prefabs/Areas/: DodgyBallArea.prefab  DroneArea.prefab  DroneWarehouseArea.prefab
Assets/DodgingAgent/Resources/: BezierCurveLibrary.asset
Assets/DodgingAgent/Scripts/Core/: IWeapon.cs  (+3 more)
Assets/DodgingAgent/config/: dodgyball.yaml  drone.yaml  drone_beefy.yaml
Assets/DodgyBall/Models/: InitialOfficialModel_1.onnx  Official_4_10MilSteps.onnx
Assets/DodgyBall/Resources/: BezierCurveLibrary.asset
Assets/DodgyBall/Scripts/: DodgerAgent.cs  EfficientSword.cs  MLStabbySword.cs  Orchestrator.cs  SwingKeyframes.cs  SwordHelpers.cs  VelocityMLSword.cs  mlSword.cs
Assets/DodgyBall/config/: DodgyBall.preset  dodgyball.yaml
Assets/DodgyBall/prefabs/: TrainingArea.prefab
Assets/ML-Agents/Timers/: DodgyBall_timers.json  SampleScene_timers.json
Assets/Resources/debug/: Debug Sphere.prefab
Assets/Rollerball/: RollerAgent.cs  Training Area.prefab
Assets/Rollerball/config/: rollerball_config.yaml
Assets/Scenes/: DodgyBall.unity  Inference.unity  InferenceDodgyBall.unity  Playground.unity  SampleScene.unity  Smaller Agent Scene.unity  Training.unity
Assets/Scenes/training/: Train 1.unity  Train 2.unity  Train 3.unity
Assets/Settings/: Recording_RPAsset.asset  UniversalRenderPipelineGlobalSettings.asset
Assets/Settings/Build Profiles/: Linux.asset
Custom/: __init__.py  models.py  networks.py
ProjectSettings/: EditorBuildSettings.asset  GraphicsSettings.asset  ProjectSettings.asset  QualitySettings.asset
(+64 files in other folders)
