[project]
name = "unitymlagents"
version = "0.1.0"
description = "Unity ML Agents local development setup"
readme = "README.md"
requires-python = "==3.10.12"
dependencies = [
    "mlagents",
    "mlagents-envs",
    "torch>=2.1.1,<2.9; platform_machine != 'aarch64'",
    "gym==0.26.2",
    "protobuf==3.20.3",
    "numpy>=1.23.5",
    "tensorboard"
]

[tool.uv.sources]
mlagents = { path = "./ml-agents/ml-agents", editable = true }
mlagents-envs = { path = "./ml-agents/ml-agents-envs", editable = true }
torch = [
  { index = "pytorch-cpu", extra = "cpu" },
  { index = "pytorch-cu128", extra = "cu128" },
]

[project.optional-dependencies]
cpu = [
  "torch>=2.8.0"
]
cu128 = [
  "torch>=2.8.0"
]

[tool.uv]
conflicts = [
  [
    { extra = "cpu" },
    { extra = "cu128" },
  ],
]

[[tool.uv.index]]
name = "pytorch-cu128"
url = "https://download.pytorch.org/whl/cu128"
explicit = true

[[tool.uv.index]]
name = "pytorch-cpu"
url = "https://download.pytorch.org/whl/cpu"
explicit = true
