[project]
name = "unitymlagents"
version = "0.1.0"
description = "Unity ML Agents local development setup"
readme = "README.md"
requires-python = "==3.10.12"
dependencies = [
    "mlagents",
    "mlagents-envs",
    "torch>=2.9",
    "torchvision",
    "gym==0.26.2",
    "protobuf==3.20.3",
    "numpy>=1.23.5",
    "tensorboard",
    "onnxscript",
    "notebook>=7.5.3",
    "setuptools<81",
    "jupyterlab>=4.5.1",
]

[tool.uv.sources]
mlagents = { path = "ml-agents/ml-agents", editable = true }
mlagents-envs = { path = "ml-agents/ml-agents-envs", editable = true }

torch = [
	{ index = "pytorch-cu128", extra = "cu128" }
]
torchvision = [
	{ index = "pytorch-cu128", extra = "cu128" }
]


[project.optional-dependencies]
tensorflow = ["tensorflow"]
cpu = [
	"torch>=2.9",
	"torchvision"
]
cu128 = [
	"torch>=2.9.0",
	"torchvision"
]

[tool.uv]
conflicts = [[
	{ extra = "cpu" },
	{ extra = "cu128" }
]]
override-dependencies = [
    "grpcio>=1.60",
    "onnx>=1.16",
    "ml_dtypes>=0.5.0",
]

[[tool.uv.index]]
name = "pytorch-cu128"
url = "https://download.pytorch.org/whl/cu128"
explicit = true
